# YOLO-RPS-Detector

./: .gitignore  LICENSE  README.md  experiments.ipynb  pyproject.toml
detector/data/: README.md
detector/data/dataset/: data.yaml
detector/src/: README.md
detector/src/modules/: README.md  __init__.py  check_dataset.py  find_missing_pairs.py  get_supported_files.py
detector/src/tests/: README.md
